// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateEditor component renders as expected 1`] = `
<div
  className="creation-view showEditor"
>
  <div
    className="creation-view-split-container showEditor"
  >
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "unset",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 1000,
          }
        }
      >
        <div
          className="creation-view-controls-container"
        >
          <div
            className="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            className="creation-view-controls"
          >
            <div
              className="creation-view-controls-textbox"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Name
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <input
                aria-invalid={false}
                aria-label="name"
                className="pf-c-form-control"
                disabled={false}
                id="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={false}
                required={true}
                type="text"
                value="policy-certificatepolicy-1"
              />
            </div>
            <div
              className="creation-view-controls-singleselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Namespace
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content={
                    <div>
                      The namespace to create and store the policy on the hub cluster.
                    </div>
                  }
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeahead-1"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-0-select-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="The namespace to create and store the policy on the hub cluster."
                      type="text"
                      value="governance"
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="namespace"
                    aria-labelledby=" pf-select-toggle-id-0"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-0"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Specifications
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content={
                    <div>
                      The parameter section that describes which set of rules will validate a cluster.
                    </div>
                  }
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-1"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <div
                      className="pf-c-chip-group"
                      data-ouia-component-type="PF4/ChipGroup"
                      data-ouia-safe={true}
                    >
                      <div
                        className="pf-c-chip-group__main"
                      >
                        
                        <ul
                          aria-label="Chip group category"
                          className="pf-c-chip-group__list"
                          role="list"
                        >
                          <li
                            className="pf-c-chip-group__list-item"
                          >
                            <div
                              className="pf-c-chip"
                              data-ouia-component-id="OUIA-Generated-Chip-1"
                              data-ouia-component-type="PF4/Chip"
                              data-ouia-safe={true}
                            >
                              <span
                                className="pf-c-chip__text"
                                id="pf-random-id-3"
                              >
                                CertificatePolicy - cert management expiration
                              </span>
                              <button
                                aria-disabled={false}
                                aria-label="Remove"
                                aria-labelledby="remove_pf-random-id-3 pf-random-id-3"
                                className="pf-c-button pf-m-plain"
                                data-ouia-component-id="Remove"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                id="remove_pf-random-id-3"
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-1-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="CertificatePolicy"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Clear all"
                    className="pf-c-button pf-m-plain pf-c-select__toggle-clear"
                    disabled={false}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      />
                    </svg>
                  </button>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="specs"
                    aria-labelledby=" pf-select-toggle-id-1"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-1"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Cluster selector
                <div
                  content={
                    <div>
                      Fill the required parameter field to select the cluster where your policy is applied. The placement policy and placement binding are required, and added into the YAML file.
                    </div>
                  }
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-2"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <div
                      className="pf-c-chip-group"
                      data-ouia-component-type="PF4/ChipGroup"
                      data-ouia-safe={true}
                    >
                      <div
                        className="pf-c-chip-group__main"
                      >
                        
                        <ul
                          aria-label="Chip group category"
                          className="pf-c-chip-group__list"
                          role="list"
                        >
                          <li
                            className="pf-c-chip-group__list-item"
                          >
                            <div
                              className="pf-c-chip"
                              data-ouia-component-id="OUIA-Generated-Chip-2"
                              data-ouia-component-type="PF4/Chip"
                              data-ouia-safe={true}
                            >
                              <span
                                className="pf-c-chip__text"
                                id="pf-random-id-6"
                              >
                                cloud: "Amazon"
                              </span>
                              <button
                                aria-disabled={false}
                                aria-label="Remove"
                                aria-labelledby="remove_pf-random-id-6 pf-random-id-6"
                                className="pf-c-button pf-m-plain"
                                data-ouia-component-id="Remove"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                id="remove_pf-random-id-6"
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-2-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="cloud: \\"Amazon\\""
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Clear all"
                    className="pf-c-button pf-m-plain pf-c-select__toggle-clear"
                    disabled={false}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      />
                    </svg>
                  </button>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="clusters"
                    aria-labelledby=" pf-select-toggle-id-2"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-2"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Standards
                <div
                  content={
                    <div>
                      The name or names of security standards your policy should validate. You can only create a new label by adding it directly into the YAML file.
                    </div>
                  }
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-3"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <div
                      className="pf-c-chip-group"
                      data-ouia-component-type="PF4/ChipGroup"
                      data-ouia-safe={true}
                    >
                      <div
                        className="pf-c-chip-group__main"
                      >
                        
                        <ul
                          aria-label="Chip group category"
                          className="pf-c-chip-group__list"
                          role="list"
                        >
                          <li
                            className="pf-c-chip-group__list-item"
                          >
                            <div
                              className="pf-c-chip"
                              data-ouia-component-id="OUIA-Generated-Chip-3"
                              data-ouia-component-type="PF4/Chip"
                              data-ouia-safe={true}
                            >
                              <span
                                className="pf-c-chip__text"
                                id="pf-random-id-9"
                              >
                                NIST-CSF
                              </span>
                              <button
                                aria-disabled={false}
                                aria-label="Remove"
                                aria-labelledby="remove_pf-random-id-9 pf-random-id-9"
                                className="pf-c-button pf-m-plain"
                                data-ouia-component-id="Remove"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                id="remove_pf-random-id-9"
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-3-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="NIST-CSF"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Clear all"
                    className="pf-c-button pf-m-plain pf-c-select__toggle-clear"
                    disabled={false}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      />
                    </svg>
                  </button>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="standards"
                    aria-labelledby=" pf-select-toggle-id-3"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-3"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Categories
                <div
                  content={
                    <div>
                      A security control category represent specific requirements for one or more standards. You can only create a new label by adding it directly into the YAML file.
                    </div>
                  }
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-4"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <div
                      className="pf-c-chip-group"
                      data-ouia-component-type="PF4/ChipGroup"
                      data-ouia-safe={true}
                    >
                      <div
                        className="pf-c-chip-group__main"
                      >
                        
                        <ul
                          aria-label="Chip group category"
                          className="pf-c-chip-group__list"
                          role="list"
                        >
                          <li
                            className="pf-c-chip-group__list-item"
                          >
                            <div
                              className="pf-c-chip"
                              data-ouia-component-id="OUIA-Generated-Chip-4"
                              data-ouia-component-type="PF4/Chip"
                              data-ouia-safe={true}
                            >
                              <span
                                className="pf-c-chip__text"
                                id="pf-random-id-12"
                              >
                                PR.DS Data Security
                              </span>
                              <button
                                aria-disabled={false}
                                aria-label="Remove"
                                aria-labelledby="remove_pf-random-id-12 pf-random-id-12"
                                className="pf-c-button pf-m-plain"
                                data-ouia-component-id="Remove"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                id="remove_pf-random-id-12"
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-4-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="PR.DS Data Security"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Clear all"
                    className="pf-c-button pf-m-plain pf-c-select__toggle-clear"
                    disabled={false}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      />
                    </svg>
                  </button>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="categories"
                    aria-labelledby=" pf-select-toggle-id-4"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-4"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Controls
                <div
                  content={
                    <div>
                      The control contains the instructions for ensuring that a policy meets the security requirements for one or more standards. You can only create a new label by adding it directly into the YAML file.
                    </div>
                  }
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-5"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <div
                      className="pf-c-chip-group"
                      data-ouia-component-type="PF4/ChipGroup"
                      data-ouia-safe={true}
                    >
                      <div
                        className="pf-c-chip-group__main"
                      >
                        
                        <ul
                          aria-label="Chip group category"
                          className="pf-c-chip-group__list"
                          role="list"
                        >
                          <li
                            className="pf-c-chip-group__list-item"
                          >
                            <div
                              className="pf-c-chip"
                              data-ouia-component-id="OUIA-Generated-Chip-5"
                              data-ouia-component-type="PF4/Chip"
                              data-ouia-safe={true}
                            >
                              <span
                                className="pf-c-chip__text"
                                id="pf-random-id-15"
                              >
                                PR.DS-2 Data-in-transit
                              </span>
                              <button
                                aria-disabled={false}
                                aria-label="Remove"
                                aria-labelledby="remove_pf-random-id-15 pf-random-id-15"
                                className="pf-c-button pf-m-plain"
                                data-ouia-component-id="Remove"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                id="remove_pf-random-id-15"
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-5-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="PR.DS-2 Data-in-transit"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Clear all"
                    className="pf-c-button pf-m-plain pf-c-select__toggle-clear"
                    disabled={false}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      />
                    </svg>
                  </button>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="controls"
                    aria-labelledby=" pf-select-toggle-id-5"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-5"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-radiobutton"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Remediation
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content={
                    <div>
                      Represents how violations are handled as defined in the resource.
                    </div>
                  }
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={true}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-1"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-inform"
                  name="remediation-inform"
                  onChange={[Function]}
                  type="radio"
                  value="inform"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-inform"
                >
                  Inform - Reports the violation, which requires manual remediation.
                </label>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={false}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-2"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-enforce"
                  name="remediation-enforce"
                  onChange={[Function]}
                  type="radio"
                  value="enforce"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-enforce"
                >
                  Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                </label>
              </div>
            </div>
            <div
              className="creation-view-controls-textbox-title"
            >
              Disable policy
              <div
                content={
                  <div>
                    Select to disable the policy from being propagated to the managed cluster. If selected, the policy can be re-enabled from the dropdown menu in the policies table.
                  </div>
                }
                data-testid="mockTooltip"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="#73bcf7"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="creation-view-controls-checkbox"
            >
              <div
                className="pf-c-check"
              >
                <input
                  aria-invalid={false}
                  aria-label="disabled"
                  checked={false}
                  className="pf-c-check__input"
                  disabled={false}
                  id="disabled"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="pf-c-check__label"
                  htmlFor="disabled"
                >
                  Disabled
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div
          className="creation-view-yaml"
        >
          <div
            className="yamlEditorContainer"
            style={
              Object {
                "display": "block",
                "minHeight": "100px",
              }
            }
          >
            <div
              className="react-monaco-editor-container"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`on control change function with active selections renders as expected 1`] = `null`;

exports[`on control change function without active selections renders as expected 1`] = `null`;

exports[`on editor change function renders as expected 1`] = `
"apiVersion: policy.open-cluster-management.io/v1
kind: Policy
metadata:
  name: policy-certificatepolicy-1
  namespace: governance
  annotations:
    policy.open-cluster-management.io/standards: NIST-CSF
    policy.open-cluster-management.io/categories: PR.DS Data Security
    policy.open-cluster-management.io/controls: PR.DS-2 Data-in-transit
spec:
  remediationAction: inform
  disabled: false
  policy-templates:
  - objectDefinition:
      apiVersion: policies.ibm.com/v1alpha1
      kind: CertificatePolicy # cert management expiration
      metadata:
        name: policy-certificatepolicy-1-example
      spec:
        namespaceSelector:
          include: [\\"default\\"]
          exclude: []
        remediationAction: inform
        severity: low
        minimumDuration: 300h
---
apiVersion: policy.open-cluster-management.io/v1
kind: PlacementBinding
metadata:
  name: binding-policy-certificatepolicy-1
  namespace: governance
placementRef:
  name: placement-policy-certificatepolicy-1
  kind: PlacementRule
  apiGroup: apps.open-cluster-management.io
subjects:
- name: policy-certificatepolicy-1
  kind: Policy
  apiGroup: policy.open-cluster-management.io
---
apiVersion: apps.open-cluster-management.io/v1
kind: PlacementRule
metadata:
  name: placement-policy-certificatepolicy-1
  namespace: governance
spec:
  clusterConditions:
  - status: \\"True\\"
    type: ManagedClusterConditionAvailable
  clusterSelector:
    matchExpressions:
      - {key: cloud, operator: In, values: [\\"Amazon\\"]}
"
`;

exports[`on editor change function renders as expected 2`] = `
"apiVersion: policy.open-cluster-management.io/v1
kind: Policy
metadata:
  name: policy-certificatepolicy-1
  namespace: 
  annotations:
    policy.open-cluster-management.io/standards: NIST-CSF
    policy.open-cluster-management.io/categories: PR.DS Data Security
    policy.open-cluster-management.io/controls: PR.DS-2 Data-in-transit
spec:
  remediationAction: inform
  disabled: false
  policy-templates:
  - objectDefinition:
      apiVersion: policies.ibm.com/v1alpha1
      kind: CertificatePolicy # cert management expiration
      metadata:
        name: policy-certificatepolicy-1-example
      spec:
        namespaceSelector:
          include: [\\"default\\"]
          exclude: []
        remediationAction: inform
        severity: low
        minimumDuration: 300h
---
apiVersion: policy.open-cluster-management.io/v1
kind: PlacementBinding
metadata:
  name: binding-policy-certificatepolicy-1
  namespace: 
placementRef:
  name: placement-policy-certificatepolicy-1
  kind: PlacementRule
  apiGroup: apps.open-cluster-management.io
subjects:
- name: policy-certificatepolicy-1
  kind: Policy
  apiGroup: policy.open-cluster-management.io
---
apiVersion: apps.open-cluster-management.io/v1
kind: PlacementRule
metadata:
  name: placement-policy-certificatepolicy-1
  namespace: 
spec:
  clusterConditions:
  - status: \\"True\\"
    type: ManagedClusterConditionAvailable
  clusterSelector:
    matchExpressions:
      - {key: cloud, operator: In, values: [\\"Amazon\\"]}
"
`;

exports[`on editor change function renders as expected 3`] = `
"apiVersion: policy.open-cluster-management.io/v1
kind: Policy
metadata:
  name: policy-certificatepolicy-1
  namespace: default1,default2,mcm
  annotations:
    policy.open-cluster-management.io/standards: NIST-CSF
    policy.open-cluster-management.io/categories: PR.DS Data Security
    policy.open-cluster-management.io/controls: PR.DS-2 Data-in-transit
spec:
  remediationAction: inform
  disabled: true
  policy-templates:
  - objectDefinition:
      apiVersion: policies.ibm.com/v1alpha1
      kind: CertificatePolicy # cert management expiration
      metadata:
        name: policy-certificatepolicy-1-example
      spec:
        namespaceSelector:
          include: [\\"default\\"]
          exclude: []
        remediationAction: inform
        severity: low
        minimumDuration: 300h
---
apiVersion: policy.open-cluster-management.io/v1
kind: PlacementBinding
metadata:
  name: binding-policy-certificatepolicy-1
  namespace: default1,default2,mcm
placementRef:
  name: placement-policy-certificatepolicy-1
  kind: PlacementRule
  apiGroup: apps.open-cluster-management.io
subjects:
- name: policy-certificatepolicy-1
  kind: Policy
  apiGroup: policy.open-cluster-management.io
---
apiVersion: apps.open-cluster-management.io/v1
kind: PlacementRule
metadata:
  name: placement-policy-certificatepolicy-1
  namespace: default1,default2,mcm
spec:
  clusterConditions:
  - status: \\"True\\"
    type: ManagedClusterConditionAvailable
  clusterSelector:
    matchExpressions:
      - {key: cloud, operator: In, values: [\\"Amazon\\"]}
"
`;
